examples/test/testpolicy13694.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13694
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key15: value35
      key22: value23
      key31: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
      podSelector:
        matchLabels:
          key35: value47
          key21: value10
